@@ -68,6 +68,11 @@
    - markus@cvs.openbsd.org 2002/05/31 11:35:15
      [auth.h auth2.c]
      move Authmethod definitons to per-method file.
+   - markus@cvs.openbsd.org 2002/05/31 13:16:48
+     [key.c]
+     add comment:
+     key_verify returns 1 for a correct signature, 0 for an incorrect signature
+     and -1 on error.
 
 20020604
  - (stevesk) [channels.c] bug #164 patch from YOSHIFUJI Hideaki (changed
@@ -752,4 +757,4 @@
  - (stevesk) entropy.c: typo in debug message
  - (djm) ssh-keygen -i needs seeded RNG; report from markus@
 
-$Id: ChangeLog,v 1.2163 2002/06/06 20:52:37 mouring Exp $
+$Id: ChangeLog,v 1.2164 2002/06/06 20:54:07 mouring Exp $
